packages/jsii/test/negatives/neg.static-prop-name.1.ts
export class MyClass {
  static get Prop() {
    return 123;
  }
}
